network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: app1.dns.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodejs-service
            port:
              number: 80
  - host: app2.dns.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: python-service
            port:
              number: 80
